--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -17,7 +17,7 @@
   "env": { "browser": true, "node": true, "es6": true },
   "rules": {
     "no-var": 2,
-    "no-console": 1,
+    "no-console": "warn",
     "react/prop-types": 0,
     "no-unused-vars": 2,
     "react-hooks/rules-of-hooks": 2,
