--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.1",
+    "react-yandex-maps": "^4.4.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-form": "^8.2.6",
