--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "redux-actions": "^2.6.4",
     "redux-form": "^8.2.6",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.0.1"
+    "redux-saga": "^1.0.1",
+    "victory": "^34.3.9"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.0.0",
