--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,14 +18,17 @@
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "victory-native": "^34.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
