--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/drawer": "^5.8.2",
     "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-ios-picker": "^1.0.0",
+    "react-native-maps": "0.27.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.9.0",
